# aiprog-assignment-2

./: .gitattributes  .gitignore  classification.py  cnn.py  kmeans.py  kmeans_sklearn.py  pyproject.toml  snn.py
datasets/stl10/1.0.0/: dataset_info.json  features.json  stl10-test.tfrecord-00000-of-00002  stl10-test.tfrecord-00001-of-00002  stl10-train.tfrecord-00000-of-00001  stl10-unlabelled.tfrecord-00000-of-00016  stl10-unlabelled.tfrecord-00001-of-00016  stl10-unlabelled.tfrecord-00002-of-00016  stl10-unlabelled.tfrecord-00003-of-00016  stl10-unlabelled.tfrecord-00004-of-00016  stl10-unlabelled.tfrecord-00005-of-00016  stl10-unlabelled.tfrecord-00006-of-00016  stl10-unlabelled.tfrecord-00007-of-00016  stl10-unlabelled.tfrecord-00008-of-00016  stl10-unlabelled.tfrecord-00009-of-00016  stl10-unlabelled.tfrecord-00010-of-00016  stl10-unlabelled.tfrecord-00011-of-00016  stl10-unlabelled.tfrecord-00012-of-00016  stl10-unlabelled.tfrecord-00013-of-00016  stl10-unlabelled.tfrecord-00014-of-00016  stl10-unlabelled.tfrecord-00015-of-00016
