[tool.poetry]
name = "assignment-2"
version = "0.1.0"
description = "Assignment 2 Prog2051"
authors = ["Dennis Kristiansen <denniskristiansen@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"
tensorflow = "2.4.*"
numpy = "1.19.*"
pandas = "1.2.*"
matplotlib = "3.3.*"
tensorflow-datasets = "4.2.*"
seaborn = "0.11.*"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
